@@ -27,7 +27,7 @@ sub updateServiceModel {
 }
 
 sub createServiceBrowser {
-	local('$table $model $panel $refresh $sorter $host $copy');
+	local('$table $model $panel $refresh $sorter $host $copy $info $remove');
 
 	$model = [new GenericTableModel: @("host", "name", "port", "proto", "info"), "host", 16];
 
@@ -39,9 +39,51 @@ sub createServiceBrowser {
         [$sorter toggleSortOrder: 2];
 	[$table setRowSorter: $sorter];
 
+	$info = lambda({
+		[lambda({
+			local('$info $val');
+			$info = [$model getSelectedValueFromColumn: $table, "info"];
+			ask_async("Set info to", $info, $this);
+			yield;
+
+			# updating service info
+			foreach $val ([$model getSelectedValuesFromColumns: $table, @("id")]) {
+				call_async($mclient, "db.report_service", %(id => $val['id'], info => $1));
+			}
+
+			local('$services');
+			call_async_callback($mclient, "db.services", $this);
+			yield;
+			$services = convertAll($1);
+			if ('services' in $services) {
+				_refreshServices($services['services']);
+				updateServiceModel(\$hosts, \$model);
+			}
+		}, \$model, \$table, \$hosts)];
+	}, \$model, \$table, $hosts => $1);
+
+	$remove = lambda({
+		local('$val');
+
+		# delete services
+		foreach $val ([$model getSelectedValuesFromColumns: $table, @("id")]) {
+			call_async($mclient, "db.remove_service", %(id => $val['id']));
+		}
+
+		# refresh our table
+		local('$services');
+		call_async_callback($mclient, "db.services", $this);
+		yield;
+		$services = convertAll($1);
+		if ('services' in $services) {
+			_refreshServices($services['services']);
+			updateServiceModel(\$hosts, \$model);
+		}
+	}, \$model, \$table, $hosts => $1);
+
 	addMouseListener($table, lambda({
 		if ([$1 isPopupTrigger]) {
-			local('$popup $hosts %r $val');
+			local('$popup $hosts %r $val $m');
 			$popup = [new JPopupMenu];
 
 			%r = %();
@@ -52,10 +94,14 @@ sub createServiceBrowser {
 			
 			if (size($hosts) > 0) {
 				host_selected_items($popup, $hosts);
+				[$popup addSeparator];
+				$m = menu($popup, "Service", 'S');
+					item($m, "Set Info", 'I', $info); 
+					item($m, "Remove", 'R', $remove);
 				[$popup show: [$1 getSource], [$1 getX], [$1 getY]];
 			}
 		}
-	}, \$table, \$model));
+	}, \$table, \$model, \$info, \$remove));
 	
 	[[$table getColumn: "info"] setPreferredWidth: 300];
 	[[$table getColumn: "host"] setPreferredWidth: 125];
