@@ -15,6 +15,8 @@ In Progress
   Armitage now tells you when you are disconnected from a server. 
 - Keyboard shortcuts to change text size now work in table view
 - Added Copy button to View -> Creds
+- Services tab right-click menu now has options to edit a service's info
+  and to delete a service from the database.
   
 27 Feb 14 (tested against msf git revision: 72da8299a5)
 ---------
